# qpc2

./: .gitignore  .gitmodules  CMakeLists.txt  _create_qpc.bat  _create_qpc.sh
inc/: args.h  base_generator.h  builder.h  conditions.h  config.h  generator_handler.h  lexer.h  logging.h  project.h  project_manager.h  util.h
scripts/: CMakeLists.txt  cmake.qpc  qpc.qpc  vstudio.qpc
scripts/base/: core.qpc  gen.qpc  msvc.qpc
src/: args.cpp  base_generator.cpp  builder.cpp  conditions.cpp  config.cpp  generator_handler.cpp  lexer.cpp  logging.cpp  project.cpp  project_manager.cpp  qpc.cpp  util.cpp
